# dynamixel-arm-movement

./: CMakeLists.txt  README.md  package.xml
configs/: positions.yaml
launch/: dynamixel_positions.launch
scripts/: position_controller.py
srv/: GetPos.srv
